bib file updates

--- a/projects/teaming/bib/ultra-cods.bib
+++ b/projects/teaming/bib/ultra-cods.bib
@@ -1,4 +1,4 @@
-@inproceedings{10.1145/3632410.3632503,
+@inproceedings{valluru2024ultra,
 author = {Valluru, Siva Likitha and Widener, Michael and Srivastava, Biplav and Gangopadhyay, Sugata},
 title = {ULTRA: Exploring Team Recommendations in Two Geographies Using Open Data in Response to Call for Proposals},
 year = {2024},
